--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.12",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
